update frontend to angular v22 & add api doc
