# backend/controllers/WriteOff_controller.go
@@ -9,6 +9,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary      Create one Write Off record
+// @Description  Create one Write Off record
+// @Tags         Write Off
+// @Accept       json
+// @Produce      json
+// @Param        request  body      dto.CreateWriteOffRecrod  true  "Write Off Request Body"
+// @Success      200      {object}  dto.GeneralCreateResponseBody
+// @Router      /asset/write-off/create [post]
 func CreateWriteOffRecord(c *gin.Context) {
 	var writeOffRecordDto dto.CreateWriteOffRecrod
 	if err := c.ShouldBindJSON(&writeOffRecordDto); err != nil {
@@ -25,6 +33,14 @@ func CreateWriteOffRecord(c *gin.Context) {
 	c.JSON(http.StatusOK, result)
 }
 
+// @Summary      List Write Off Records
+// @Description  List Write Off Records
+// @Tags         Write Off
+// @Accept       json
+// @Produce      json
+// @Param        request  body      dto.ListWriteOffReqDto  true  "List Write Off Request Body"
+// @Success      200      {object}  dto.WriteOffList
+// @Router       /asset/write-off/list [post]
 func ListPageWriteOff(c *gin.Context) {
 	var writeOffPageDto dto.ListWriteOffReqDto
 	if err := c.ShouldBindJSON(&writeOffPageDto); err != nil {
